--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["onLanguage:ruby"],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [{
