--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "rspec-file-generator",
   "displayName": "Rspec File Generator",
   "description": "Automatically generate RSpec test files for Ruby on Rails applications with a simple right-click.",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "engines": {
+    "vscode": "^1.82.2"
+  },
   "categories": [
     "Other"
   ],
@@ -37,7 +40,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.88.0",
+    "@types/vscode": "^1.82.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
