--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "rspec-file-generator",
   "displayName": "Rspec File Generator",
   "description": "Automatically generate RSpec test files for Ruby on Rails applications with a simple right-click.",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "engines": {
     "vscode": "^1.82.2"
   },
+
+  "icon": "image.jpeg",
   "categories": [
     "Other"
   ],
